re-work for separate HOME & BASE and more flexibility